--- a/index.html
+++ b/index.html
@@ -85,17 +85,15 @@
     <h1>Yo-Yo Physics Simulation</h1>
     
     <div class="description">
-        <h2>How a Yo-Yo Works</h2>
-        <p>A yo-yo is a toy consisting of two equally sized and weighted disks of plastic or other material, connected with an axle, with a string tied around it.</p>
-        <p>When you throw the yo-yo downward:</p>
+        <h2>Come funziona uno YO-YO</h2>
+        <p>Salve Felice, allora nel caso tu sia nel dubbio, uno yo-yo is è un giocattolo fatto di  due dischi di plastica o di altro materiale di uguali dimensioni e peso, collegati da un asse, con una corda legata intorno.</p>
         <ol>
-            <li>The string unwinds as the yo-yo descends, converting potential energy to kinetic energy</li>
-            <li>At the bottom of the string, the yo-yo continues to spin due to angular momentum</li>
-            <li>Friction between the string and axle causes the yo-yo to wind itself back up</li>
-            <li>The yo-yo returns to your hand, ready to be thrown again</li>
+            <li>La corda si srotola mentre lo yo-yo scende, convertendo l'energia potenziale in energia cinetica</li>
+ <li>Alla fine della corda, lo yo-yo continua a girare grazie al momento angolare</li>
+ <li>L'attrito tra la corda e l'asse fa sì che lo yo-yo si riavvolga</li>
+ <li>Lo yo-yo torna in mano, pronto per essere lanciato di nuovo</li>
         </ol>
-        <p>The key physics principles involved are: conservation of energy, angular momentum, and rotational motion.</p>
-    </div>
+        <p>I principi fisici chiave coinvolti sono: conservazione dell'energia, del momento angolare e del moto rotatorio.</div>
     
     <div class="simulation">
         <div class="hand"></div>
