--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="string" id="string"></div>
         <div class="yoyo" id="yoyo"></div>
         <div class="controls">
-            <button onclick="throwYoYo()">Throw Yo-Yo</button>
+            <button onclick="throwYoYo()">Fai partire lo Yo-Yo</button>
 
         </div>
     </div>
