--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-    <h1>Yo-Yo Physics Simulation</h1>
+    <h1>Yo-Yo Simulator</h1>
     
     <div class="description">
         <h2>Come funziona uno YO-YO</h2>
